# vibe-learning

./: .gitignore  README.md  dropck2  dropck_test
examples/blockchain/: BLOCKCHAIN_GUIDE.md  Cargo.toml  README.md
examples/blockchain/keys/: private.pem
examples/blockchain/src/: blockchain.rs  keys.rs  lib.rs  main.rs  storage.rs  utils.rs
rust-extended/: .check_all.rs  CONTENTS.md  Cargo.toml  INSPIRATION.md  README.md
rust-extended/articles/: 01_five_deep_rust_facts.md  02_sync_prelude_async_blocks.md  03_pin_and_unpin.md  04_cancellation_safety.md  05_drop_order_manually_drop.md  06_variance_and_subtyping.md  07_hrtb_and_fn_traits.md  08_async_fn_in_traits.md  09_gats_lending_iterators.md  10_coherence_and_orphan_rule.md  11_drop_check_phantom_data.md  12_niche_optimization.md  13_maybe_uninit.md  14_miri_workflow.md
rust-extended/demos/: README.md
rust-extended/demos/async/: README.md
rust-extended/demos/async/check_sync_prelude/: Cargo.toml  README.md
rust-extended/demos/async/demo_async_trait/: Cargo.toml  README.md
rust-extended/demos/async/demo_cancel_safety/: Cargo.toml  README.md
rust-extended/demos/async/demo_pin/: Cargo.toml  README.md
rust-extended/demos/memory/: README.md
rust-extended/demos/memory/demo_drop_check/: Cargo.toml  README.md
rust-extended/demos/memory/demo_drop_order/: Cargo.toml  README.md
rust-extended/demos/memory/demo_maybe_uninit/: Cargo.toml  README.md
rust-extended/demos/memory/demo_miri/: Cargo.toml  README.md
rust-extended/demos/mindset/: README.md
rust-extended/demos/type-system/: README.md
(+123 files in other folders)
